Version 0.5.0
-------------
    * Support for Gradle 5.5+
    * Require Java 8 minimally
    * Fix compatibility with the Shadow plugin
    * JMH jar is now a fatjar following the recommendation from JMH (#154)
Version 0.4.8
-------------
    * Support for Gradle 5+
    * Fix incorrect use of `compile` and `runtime` configurations
    * Force GC after running tests
Version 0.4.7
-------------
    * Fix empty benchmark list
    * Use the lazy task API in Gradle 4.9+
    * Cache the code generation task
Version 0.4.6
-------------
    * Upgrade to JMH 1.21
    * Avoid overlapping outputs
Version 0.4.5
-------------
    * Update compatibility with Gradle 4.3
    * Fix compatibility with Windows 10
    * Fix resolution rules not applied on JMH runtime
Version 0.4.4
-------------
    * Removed accidental logging
Version 0.4.3
-------------
    * Fix to make sure tests are not executed concurrently when multiple JMH tasks exist in the project

Version 0.4.2
-------------
    * Fix memory leak
    * Fix potential NPE in benchmark parameters configuration

Version 0.4.1
-------------
    * Fix classloading issue in worker process
Version 0.4.0
-------------
    * Requires Gradle 4+
    * Use Shadow 2.0.1
Version 0.2.0
-------------
    * Requires Gradle 2.2+
    * Fixed JMH version definition ignored issue (https://github.com/melix/jmh-gradle-plugin/issues/26)
    * Fixed sourceSet definitions being attached to idea root project only instead of the actual module
    * Provides a small sample module as show case (Run gradle jmh in sample subdirectory)

Version 0.1.4
-------------
    * Support for the 'shadow' plugin

Version 0.1.3
-------------

    * Support for IDEA plugin setup
    * Allow changing the name of generated Jar
    * Support for ZIP64
    * jmhJar does not rebuild JAR if bechmarks are changed
    * Exclude signature files from the destination JAR