@@ -26,6 +26,7 @@ plugins {
     id("com.github.kt3k.coveralls") version "2.8.2"
     id("jacoco")
     id("idea")
+    id("java-gradle-plugin")
 }
 
 buildScan {
